src/objects/OrganizationPotentialAvailability__c.object
<CustomObject>
    <description>This object is used to configure organization potential avilability</description>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <controllingField>Potential__c</controllingField>
            <picklistValues>
                <fullName>Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock too low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>OrganizationPotentialAvailabilitys</relationshipLabel>
        <relationshipName>OrganizationPotentialAvailabilitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <label>Potential</label>
        <picklist>
            <picklistValues>
                <fullName>AdditionalPlacements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PictureOfSuccessFacings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PictureOfSuccessListing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quanitity__c</fullName>
        <label>Quanitity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrganizationPotentialAvailability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPA-{00000}</displayFormat>
        <label>OrganizationPotentialAvailability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrganizationPotentialAvailabilitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>